--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@
 }
 
 /* my plans styls */
-.my-plans{
-    
+.my-plans {
+    color: var(--Dark-01, #151414);
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: 150px;
 }
